src/main/java/semantic/symbolTable/test/failing/redefinedMethodParam.ru
struct A {}
impl A {
    .(){}
    fn someFn(Int a, Str a)-> void {}
}
start{}